Bug 781482 - Fix rebase error in nsObjectLoadingContent. r=josh